@@ -44,8 +44,8 @@ enum ECPGttype
 	ECPGt_bool,
 	ECPGt_float, ECPGt_double,
 	ECPGt_varchar, ECPGt_varchar2,
-	ECPGt_numeric,
-	ECPGt_decimal,			/* only used internally */
+	ECPGt_numeric,			/* this is a decimal that stores its digits in a malloced array */
+	ECPGt_decimal,			/* this is a decimal that stores its digits in a fixed array */
 	ECPGt_date,
 	ECPGt_timestamp,
 	ECPGt_interval,
