@@ -341,7 +341,7 @@ PGTYPEStimestamp_to_asc(Timestamp tstamp)
 	char		buf[MAXDATELEN + 1];
 	char		*tzn = NULL;
 	fsec_t		fsec;
-	int		DateStyle = 0;
+	int		DateStyle = 1;	/* this defaults to ISO_DATES, shall we make it an option? */
 
 	if (TIMESTAMP_NOT_FINITE(tstamp))
 		EncodeSpecialTimestamp(tstamp, buf);
